Tries to fix scripted tests isolating them